--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,7 @@
     "streambuf": "cpp",
     "typeinfo": "cpp",
     "iomanip": "cpp",
-    "ctime": "cpp"
+    "ctime": "cpp",
+    "bitset": "cpp"
   }
 }
