--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,32 +1,29 @@
 {
-  "version": "2.0.0",
-  "tasks": [
-    {
-      "label": "Compile", 
-      "command": "clang++", 
-      "args": [
-        "${file}",
-        "-o",
-        "${fileDirname}/${fileBasenameNoExtension}.exe",
-        "-g", 
-        "-Wall",
-        "-static-libgcc",
-        "-fcolor-diagnostics",
-        "--target=x86_64-w64-mingw", 
-        "-std=c++17" 
-      ], 
-      "type": "shell", 
-      "group": {
-        "kind": "build",
-        "isDefault": true 
-      },
-      "presentation": {
-        "echo": true,
-        "reveal": "always", 
-        "focus": false, 
-        "panel": "shared" 
-      }
-      // "problemMatcher":"$gcc" 
-    }
-  ]
-}
+	// See https://go.microsoft.com/fwlink/?LinkId=733558
+	// for the documentation about the tasks.json format
+	"version": "2.0.0",
+	"tasks": [
+	  {
+		"type": "shell",
+		"label": "clang++ build active file",
+		"command": "/usr/bin/clang++",
+		"args": [
+		  "-std=c++17",
+		  "-stdlib=libc++",
+		  "-g",
+		  "${file}",
+		  "-o",
+		  "${fileDirname}/${fileBasenameNoExtension}"
+		],
+		"options": {
+		  "cwd": "${workspaceFolder}"
+		},
+		"problemMatcher": ["$gcc"],
+		"group": {
+		  "kind": "build",
+		  "isDefault": true
+		}
+	  }
+	]
+  }
+  
